--- a/resume.html
+++ b/resume.html
@@ -28,6 +28,7 @@
   </nav> 
 </div>
 </div>
+<main>
 <div id="Aboutme">
 <h1>About me </h1>
  </div>
@@ -284,12 +285,16 @@
     </table>
   </article>
 </section> 
-    
-<div id="footdisplay" style="position : relative; width: 800px;  ">
+</main>    
+<footer >
+  <!--  -->
+<div  style="  padding: 2rem 2rem 2rem 3rem  ">
+<div id="footdisplay" >
   <h2 id="Contact">Connect with us!</h2>
   <img src="./Asset/BussinessCard.jpg" width="300px" alt="" />
  
   <video id="vs"   autoplay muted loop>  <source src="./Asset/onlinebank-1.mp4" ></source></video>
+</div>
 </div>
 <a class="image" href="https://www.facebook.com/">
   <img alt="Facebook Logo" src="./Asset/facebook-logo.png"></a>
@@ -301,6 +306,7 @@
   <img alt="Pinterest Logo" src="./Asset/pinterest-logo.png"></a>
 For questions, send email to
 <a href="mailto:lei11355@gmail.com">lei11355@gmail.com</a></p>
+</footer>
 </body>
 
 </html>
